# Pydantic-AI-Web-Search-Agent

./: .gitignore  LICENSE  README.md  cli_web_agent.py  cli_web_agent_g.py  pyproject.toml
