[project]
name = "web-agent"
version = "0.1.0"
description = "AI-powered web search agent with support for OpenAI and Google AI models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "devtools>=0.12.2",
    "httpx>=0.27.0",
    "logfire>=4.3.3",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-ai-slim[google,openai]>=0.7.2",
    "python-dotenv>=1.1.1",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
web-agent = "web_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_agent"]
